--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ click==8.0.1
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.1
+Flask-Admin==1.5.8
 Flask-BabelEx==0.9.4
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
+Flask-Mobility==1.1.0
 Flask-Principal==0.4.0
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.5.1
